# dirms-599

./: .gitignore  README.md
backend/: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml  reference.db  seed_data.sql  seed_data_needs_archetypes.sql  test.env
backend/app/api/: archetypes.py  auth.py  deps.py  employees.py  entity.py  incidents.py  inventory.py  needs_archetypes.py  people_reports.py
backend/app/core/: config.py  email.py  security.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/schemas/: schemas.py
backend/app/services/: archetype_service.py  auth_service.py  entity_service.py  incident_service.py  inventory_service.py  people_report_service.py
frontend/: .prettierrc  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/Auth/: ProtectedRoute.tsx
frontend/src/components/Charts/: DisasterStats.tsx
frontend/src/components/Dialogs/: DisasterDialog.tsx  IncidentDialog.tsx  InventoryDialog.tsx  PeopleReportDialog.tsx
frontend/src/components/Forms/: AddressSearch.tsx  (+1 more)
frontend/src/contexts/: AuthContext.tsx  DataContext.tsx
frontend/src/hooks/: useGeolocation.ts  useNominatim.ts
frontend/src/mocks/: auth.ts  disasters.ts  index.ts  inventory.ts  people-report.ts
frontend/src/pages/: Login.tsx  MagicLinkHandler.tsx  OrganizationSettings.tsx
frontend/src/services/: mockAuthService.ts
frontend/src/theme/: index.ts  styledComponents.ts  theme.ts  tokens.ts
frontend/src/types/: index.ts
frontend/src/utils/: distance.ts
(+67 files in other folders)
