[project]
name = "disaster-management-backend"
version = "1.0.0"
description = "FastAPI-based backend for the Disaster Management System"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "alembic>=1.18.4",
    "annotated-types>=0.7.0",
    "anyio>=4.13.0",
    "certifi>=2026.2.25",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.7",
    "click>=8.3.2",
    "cryptography>=46.0.7",
    "dnspython>=2.8.0",
    "ecdsa>=0.19.2",
    "email-validator>=2.3.0",
    "greenlet>=3.4.0",
    "h11>=0.16.0",
    "idna>=3.11",
    "Mako>=1.3.11",
    "MarkupSafe>=3.0.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pyasn1>=0.6.3",
    "pycparser>=3.0",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "resend>=2.29.0",
    "rsa>=4.9.1",
    "six>=1.17.0",
    "SQLAlchemy>=2.0.49",
    "starlette>=1.0.0",
    "typing-inspection>=0.4.2",
    "typing_extensions>=4.15.0",
    "urllib3>=2.6.3",
]

[tool.fastapi]
main = "main.py"

[tool.fastapi.dev]
host = "0.0.0.0"
port = 8000
reload = true

[tool.fastapi.run]
host = "0.0.0.0"
port = 8000
workers = 4
